# wb_tracker_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose-example.yml  docker-compose.yml  initial.sh  main.py  pyproject.toml  requirements.txt  script.py
bot/: Dockerfile  alembic.ini  config.py  main.py
bot/db/: __init__.py  engine.py  models.py
bot/db/migrations/: env.py
bot/db/migrations/versions/: bd77af312094_db_minor_upgrade.py  d15ef146a2ca_rebasee.py  d7ac98d65f76_db_creation.py
bot/handlers/: __init__.py  bot_commands.py  callbacks.py  handlers.py  kb.py
docker/geckodriver/: Dockerfile
docker/main/: Dockerfile
docker/parser/: Dockerfile
handlers/: __init__.py  bot_commands.py  callbacks.py  handlers.py  inlinekb.py
logger/: logger.py
script/: Dockerfile  config.py  db.py  main.py
sqdb/: __init__.py  sqdatabase.py  sql_context.py
tests/: test_handlers.py
